fix-sequence-flickering-css

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -126,6 +126,11 @@ h1,h2,h3,h4,h5,h6,p {
     width: 1264px;
   }
 
+  .container__sequence {
+    width: 100vw;
+    overflow-x: hidden;
+  }
+
   .hero .control-dots {
     bottom: 50px !important;
   }
